--- a/task1.html
+++ b/task1.html
@@ -15,11 +15,11 @@
     <hr>
     <h3>Стек навыков</h3>
     <ul></ul>
-      <li><html</li>
-      <li><css</li>
-      <li><JavaScript</li>
-      <li><React(Next.JS)</li> 
-      <li><Node.JS(EXPRESS.JS)</li> 
+      <li>html</li>
+      <li>css</li>
+      <li>JavaScript</li>
+      <li>React(Next.JS)</li> 
+      <li>Node.JS(EXPRESS.JS)</li> 
         <ul></ul>
         <hr>
 
