--- a/task1.html
+++ b/task1.html
@@ -19,7 +19,9 @@
       <li>css</li>
       <li>JavaScript</li>
       <li>React(Next.JS)</li> 
-      <li>Node.JS(EXPRESS.JS)</li> 
+      <li>Node.JS(EXPRESS.JS)
+        
+      </li> 
         <ul></ul>
         <hr>
 
