--- a/task1.html
+++ b/task1.html
@@ -19,10 +19,8 @@
       <li>css</li>
       <li>JavaScript</li>
       <li>React(Next.JS)</li> 
-      <li>Node.JS(EXPRESS.JS)
-        
-      </li> 
-        <ul></ul>
+      <li>Node.JS(EXPRESS.JS)</li> 
+       <ul></ul>
         <hr>
 
          <h3>Увлечения</h3>
