--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Практические задания | Web - программист</title>
 </head>
        <h1>Практические задания</h1>
-       <ol></ol>
+       <ol>
     <Ii>
-        <a href="task1.html">Практическое задание №1</a>
-    </Ii>
+     <li><a href="task1.html">Практическое задание №1</a></Ii>
+        <li><a href="task2.html">Практическое задание №2</a><li>
+        </li>
+
     
 </body>
 </html>
