--- a/task3.html
+++ b/task3.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="task3.css">
 </head>
 <body>
+        <a class="black-main" href="index.html">На главную</a>
+    <hr>
     <div class="cards">
     <div class="card card-1">
         <h3>Fennec <br> fox</h3>
