--- a/task3.html
+++ b/task3.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="task3.css">
 </head>
 <body>
-    
+        <a class="black-main" href="index.html">На главную</a>
+    <hr>
     <hr>
     <div class="cards">
     <div class="card card-1">
