--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <Ii>
      <li><a href="task1.html">Практическое задание №1</a></Ii>
         <li><a href="task2.html">Практическое задание №2</a><li>
-        </li><a href="task3.html">Практическое задание #3</a><li>
-
-
-    
+        </li><a href="task3.html">Практическое задание №3</a><li> 
 </body>
 </html>
